# to-do-better

./: .gitignore
app/: drizzle.config.ts  package-lock.json  package.json
app/src/: app.ts  index.ts
app/src/db/: connection.ts  migrate.ts  schema.ts
app/src/lib/: activity.ts  recurrence.ts
app/src/routes/: activity.ts  backups.ts  batch.ts  connections.ts  groups.ts  search.ts  sync.ts  templates.ts  todos.ts  trash.ts
app/src/tests/: activity-backups.test.ts  batch.test.ts  connections.test.ts  database.test.ts  groups.test.ts  health.test.ts  helpers.ts  persistence.test.ts  search.test.ts  sync.test.ts  todos.test.ts  trash.test.ts
docs/: live-sync-pwa.md  native-wrappers.md  product-spec.md  rules.md  typescript-audit-2026-03-24.md
frontend/: .env.example  capacitor.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  playwright.supabase.config.ts  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/android/app/: build.gradle
frontend/e2e/: advanced-features.spec.ts  app-smoke.spec.ts  supabase-auth.supabase.spec.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/api/: client.ts
frontend/src/components/: AuthScreen.tsx  ConnectionInline.tsx  ConnectionModal.tsx  ConnectionView.tsx  EmptyState.tsx  GraphView.tsx  PasscodeLockScreen.tsx  ReminderAlarmModal.tsx  ReminderView.tsx  (+8 more)
supabase/: schema.sql
(+22 files in other folders)
