[package]
name = "nodes_todo_desktop"
version = "1.0.0"
description = "Desktop shell for Nodes To-Do"
authors = ["Naman"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
